Fixed spacing between images attached to article in extended text editor. Added limit for file uploading (5)

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1921,6 +1921,7 @@ a.small-icon, button.small-icon {
 						background-size: cover;
 						border-radius: 3px;
 						overflow: hidden;
+						margin-bottom: 10px;
 
 						.remove {
 							position: absolute;
